--- a/contact.html
+++ b/contact.html
@@ -75,7 +75,17 @@
     <main class="flex-fill">
         <section class="section-spacer section-hero-intro">
           <div class="container">
-              <div class="row align-items-center">
+              <div class="row align-items-center col-spacing-30">
+                  <div class="col-lg-5 mb-4 mb-lg-0 text-center">
+  <div class="contact-image-wrap">
+    <img
+      src="assets/images/coaching-journey.jpg"
+      alt="A quiet moment of reflection — beginning a coaching journey"
+      class="contact-image"
+    >
+  </div>
+</div>
+
                   <div class="col-lg-7 mb-4 mb-lg-0">
                     <h1 class="mb-3">Begin your <i class="blue-font-color">coaching journey</i>.</h1>
                     <p class="mb-3">I offer one-to-one, 60-minute transformative coaching sessions online, creating a calm, supportive and collaborative space for you to reflect and explore what matters most.</p>
