--- a/contact.html
+++ b/contact.html
@@ -76,22 +76,29 @@
         <section class="section-spacer section-hero-intro">
           <div class="container">
               <div class="row align-items-center col-spacing-30">
-                  <div class="col-lg-5 mb-4 mb-lg-0 text-center">
-  <div class="contact-image-wrap">
-    <img
-      src="assets/images/coaching-journey.jpg"
-      alt="A quiet moment of reflection — beginning a coaching journey"
-      class="contact-image"
-    >
-  </div>
-</div>
 
-                  <div class="col-lg-7 mb-4 mb-lg-0">
-                    <h1 class="mb-3">Begin your <i class="blue-font-color">coaching journey</i>.</h1>
+  <!-- TEXT FIRST -->
+  <div class="col-lg-7 mb-4 mb-lg-0 order-1 order-lg-1">
+    <h1 class="mb-3">Begin your <i class="blue-font-color">coaching journey</i>.</h1>
                     <p class="mb-3">I offer one-to-one, 60-minute transformative coaching sessions online, creating a calm, supportive and collaborative space for you to reflect and explore what matters most.</p>
                     <p class="mb-3">If you’re curious about how coaching could support you, you’re invited to book a free 30-minute Discovery Call. It’s a relaxed conversation where we can get to know each other and see whether the approach feels right for you.</p>
                     <p class="mb-3">Together we’ll reconnect with your values, clarify your direction, and help you act with intention.</p>
                     </div>
+  </div>
+
+  <!-- IMAGE SECOND (RIGHT on desktop) -->
+  <div class="col-lg-5 mb-4 mb-lg-0 order-2 order-lg-2 text-center">
+    <div class="contact-image-wrap">
+      <img
+        src="assets/images/coaching-journey.jpg"
+        alt="A quiet moment of reflection — beginning a coaching journey"
+        class="contact-image"
+      >
+    </div>
+  </div>
+
+</div>
+                    
                   <div class="col-lg-5">
                       <div class="content-card h-100">
                           <h2 class="mb-3">Work with me.</h2>
