--- a/contact.html
+++ b/contact.html
@@ -74,51 +74,56 @@
 
     <main class="flex-fill">
         <section class="section-spacer section-hero-intro">
-          <div class="container">
-              <div class="row align-items-center col-spacing-30">
+  <div class="container">
+    <div class="row align-items-center col-spacing-30">
 
-  <!-- TEXT FIRST -->
-  <div class="col-lg-7 mb-4 mb-lg-0 order-1 order-lg-1">
-    <h1 class="mb-3">Begin your <i class="blue-font-color">coaching journey</i>.</h1>
-                    <p class="mb-3">I offer one-to-one, 60-minute transformative coaching sessions online, creating a calm, supportive and collaborative space for you to reflect and explore what matters most.</p>
-                    <p class="mb-3">If you’re curious about how coaching could support you, you’re invited to book a free 30-minute Discovery Call. It’s a relaxed conversation where we can get to know each other and see whether the approach feels right for you.</p>
-                    <p class="mb-3">Together we’ll reconnect with your values, clarify your direction, and help you act with intention.</p>
-                    </div>
-  </div>
+      <!-- LEFT: TEXT + IMAGE -->
+      <div class="col-lg-7 mb-4 mb-lg-0">
+        <h1 class="mb-3">Begin your <i class="blue-font-color">coaching journey</i>.</h1>
 
-  <!-- IMAGE SECOND (RIGHT on desktop) -->
-  <div class="col-lg-5 mb-4 mb-lg-0 order-2 order-lg-2 text-center">
-    <div class="contact-image-wrap">
-      <img
-        src="assets/images/coaching-journey.jpg"
-        alt="A quiet moment of reflection — beginning a coaching journey"
-        class="contact-image"
-      >
+        <p class="mb-3">
+          I offer one-to-one, 60-minute transformative coaching sessions online, creating a calm,
+          supportive and collaborative space for you to reflect and explore what matters most.
+        </p>
+
+        <p class="mb-3">
+          If you’re curious about how coaching could support you, you’re invited to book a free
+          30-minute Discovery Call. It’s a relaxed conversation where we can get to know each other
+          and see whether the approach feels right for you.
+        </p>
+
+        <p class="mb-4">
+          Together we’ll reconnect with your values, clarify your direction, and help you act with intention.
+        </p>
+
+        <!-- IMAGE under the text (still inside the left column) -->
+        <div class="contact-image-wrap">
+          <img
+            src="assets/images/coaching-journey.jpg"
+            alt="A quiet moment of reflection — beginning a coaching journey"
+            class="contact-image"
+          >
+        </div>
+      </div>
+
+      <!-- RIGHT: WORK WITH ME CARD -->
+      <div class="col-lg-5">
+        <div class="content-card h-100">
+          <h2 class="mb-3">Work with me.</h2>
+
+          <ul class="list-checks mb-0">
+            <li>Free Discovery Call — 30 minutes, relaxed and no obligation.</li>
+            <li>One-to-one coaching — 60-minute sessions online.</li>
+            <li>Availability focused on evenings and weekends.</li>
+            <li>I work with clients worldwide online.</li>
+          </ul>
+        </div>
+      </div>
+
     </div>
   </div>
+</section>
 
-</div>
-                    
-                  <div class="col-lg-5">
-                      <div class="content-card h-100">
-                          <h2 class="mb-3">Work with me.</h2>
-                          <ul class="list-checks mb-0">
-                            <li>Free Discovery Call — 30 minutes, relaxed and no obligation.</li>
-                            <li>One-to-one coaching — 60-minute sessions online.</li>
-                            <li>Availability focused on evenings and weekends.</li>
-                            <li>I work with clients worldwide online.</li>
-                          </ul>
-
-                        </br></br>
-                        <div class="d-flex flex-wrap align-items-center">
-
-                            <!-- a class="btn accent-btn mr-3 mb-2" href="https://calendly.com/alexandraa-noein/30min">Book a Discovery Call</a -->
-                        </div>
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </section>
 
         <section class="section-spacer">
             <div class="container">
