--- a/contact.html
+++ b/contact.html
@@ -73,41 +73,48 @@
     <div class="navbar-placeholder"></div>
 
     <main class="flex-fill">
-        <section class="section-spacer section-hero-intro">
+<section class="section-spacer section-hero-intro">
   <div class="container">
-    <div class="row align-items-center col-spacing-30">
+    <div class="row align-items-start col-spacing-30">
 
-      <!-- LEFT: TEXT + IMAGE -->
-      <div class="col-lg-7 mb-4 mb-lg-0">
-        <h1 class="mb-3">Begin your <i class="blue-font-color">coaching journey</i>.</h1>
+      <!-- LEFT: TEXT -->
+      <div class="col-lg-7">
+        <h1 class="mb-3">
+          Begin your <i class="blue-font-color">coaching journey</i>.
+        </h1>
 
         <p class="mb-3">
-          I offer one-to-one, 60-minute transformative coaching sessions online, creating a calm,
-          supportive and collaborative space for you to reflect and explore what matters most.
+          I offer one-to-one, 60-minute transformative coaching sessions online,
+          creating a calm, supportive and collaborative space for you to reflect
+          and explore what matters most.
         </p>
 
         <p class="mb-3">
-          If you’re curious about how coaching could support you, you’re invited to book a free
-          30-minute Discovery Call. It’s a relaxed conversation where we can get to know each other
-          and see whether the approach feels right for you.
+          If you’re curious about how coaching could support you, you’re invited
+          to book a free 30-minute Discovery Call. It’s a relaxed conversation
+          where we can get to know each other and see whether the approach feels
+          right for you.
         </p>
 
         <p class="mb-4">
-          Together we’ll reconnect with your values, clarify your direction, and help you act with intention.
+          Together we’ll reconnect with your values, clarify your direction,
+          and help you act with intention.
         </p>
+      </div>
 
-        <!-- IMAGE under the text (still inside the left column) -->
-        <div class="contact-image-wrap">
+      <!-- RIGHT: IMAGE + CARD -->
+      <div class="col-lg-5">
+
+        <!-- Image -->
+        <div class="contact-image-wrap mb-4">
           <img
             src="assets/images/coaching-journey.jpg"
             alt="A quiet moment of reflection — beginning a coaching journey"
             class="contact-image"
           >
         </div>
-      </div>
 
-      <!-- RIGHT: WORK WITH ME CARD -->
-      <div class="col-lg-5">
+        <!-- Card -->
         <div class="content-card h-100">
           <h2 class="mb-3">Work with me.</h2>
 
@@ -118,11 +125,13 @@
             <li>I work with clients worldwide online.</li>
           </ul>
         </div>
+
       </div>
 
     </div>
   </div>
 </section>
+
 
 
         <section class="section-spacer">
